--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
       - echo "Deploying the Lambda function"
       - aws lambda update-function-code \
           ----function-name CICD-Test-Function-1 \
-          --zip-file fileb://function.zip
+          --zip-file fileb://function1.zip
 
 artifacts:
   type: zip
