--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
   build:
     commands:
       - echo "Zipping the Lambda function code"
-      - zip function.zip lambda_function.py
+      - zip function1.zip lambda_function.py
   post_build:
     commands:
       - echo "Deploying the Lambda function"
