--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,13 +13,11 @@ phases:
   build:
     commands:
       - echo "Zipping the Lambda function code"
-      - zip function.zip lambda_function.py
+      - zip -r function.zip lambda_function.py
   post_build:
     commands:
       - echo "Deploying the Lambda function"
-      - aws lambda update-function-code \
-        ----function-name CICD-Test-Function-1 \
-         --zip-file fileb://function.zip
+      - aws lambda update-function-code --function-name CICD-Test-Function-1 --zip-file fileb://function.zip
 
 
 artifacts:
